# optica-sig

./: .dockerignore  .env.example  .env.prod.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/hooks/: session_start.sh
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: __init__.py  main.py
app/api/: __init__.py  crud_router.py
app/api/routers/: auth.py  branches.py  catalog.py  company.py  customers.py  pricing.py  products.py  stock.py  suppliers.py  users.py
app/core/: config.py  crud.py  database.py  deps.py  security.py
app/models/: __init__.py  audit.py  auth.py  base.py  branch.py  company.py  customer.py  enums.py  pricing.py  product.py  stock.py  supplier.py
app/schemas/: auth.py  branch.py  common.py  company.py  customer.py  pricing.py  product.py  stock.py  supplier.py
app/services/: audit.py  auth.py  numbering.py  pricing.py  stock.py
app/web/: index.html
docker/: Caddyfile  entrypoint.sh
docs/: ARCHITECTURE.md  DEPLOY.md  ER_DIAGRAM.md
scripts/: seed.py
tests/: conftest.py  test_auth.py  test_branches.py  test_customers.py  test_numbering.py  test_pricing.py  test_products.py  test_rbac.py  test_stock.py
